# bookmarkplasmoid

./: .cmake-format  .gitignore  .pre-commit-config.yaml  Bookmark_widget.kdev4  CMakeLists.txt  CONTRIBUTING.md  Readme.md  Release.sh  bookmarks-kde.xml  build.sh  install  install.sh
.devcontainer/: .gdbinit  Dockerfile  decontainer.json  devcontainer.json  install_dependencies.sh  install_dependencies_ubuntu_20.sh  install_dependencies_ubuntu_22.sh  install_dependencies_ubuntu_24.sh
.github/: test_native_building.yml
.github/actions/build_kde_neon_developer/: Dockerfile  action.yml  entrypoint.sh  install_dependencies_kde_neon_developer.sh
.github/workflows/: test_building_devcontainer.yml  test_kde_neon.yml  test_native_building.yml  test_ubuntu_2004_building.yml  test_ubuntu_2204_building.yml  test_ubuntu_2404_building.yml
.kdev4/: Bookmark_widget.kdev4
DataEngine/: CMakeLists.txt  XbelReader.cpp  XbelReader.hpp  bookmark.cpp  bookmark.hpp  bookmarkengine.cpp  bookmarkengine.desktop  bookmarkengine.h  plasma-engine-testtime.desktop  testtimeengine.cpp  testtimeengine.h
DataEngine/Tests/: CMakeLists.txt  main.cpp
libbookmarksmodule/: CMakeLists.txt  bookmark.cpp  bookmark.hpp  bookmarkmodel.cpp  bookmarkmodel.hpp  bookmarksmodule.cpp  bookmarksmodule.hpp  launcher.cpp  launcher.hpp  qmldir
libbookmarksmodule/Tests/: CMakeLists.txt  bookmarksmodule_test.cpp  bookmarksmodule_test.h  main.cpp
libbookmarksmodule/Tests/resources/: Bookmarks  okular_bookmarks.xml
libbookmarksmodule/include/libbookmarksmodule/: abstract_environment_theme_facade.h  bookmark_model_plugin.h  bookmark_source_reader_interface.h  bookmarkmodel.h  data_types.h  environment_theme_facade.h  utils.h  xbel_file_reader.h  xbel_parser.h  xbel_reader.h  xml_bookmark_reader_interface.h  xml_parser_interface.h
libbookmarksmodule/src/: bookmark_model_plugin.cpp  bookmarkmodel.cpp  environment_theme_facade.cpp  utils.cpp  xbel_file_reader.cpp  xbel_parser.cpp  xbel_reader.cpp
libbookmarksmodule/tests/: CMakeLists.txt  bookmarksmodule_chrome_test.cpp  bookmarksmodule_chrome_test.h  bookmarksmodule_konqueror_test.cpp  bookmarksmodule_konqueror_test.h  bookmarksmodule_okular_test.cpp  bookmarksmodule_okular_test.h  bookmarksmodule_test.cpp  bookmarksmodule_test.h  bookmarksmoduletest.cpp  bookmarksmoduletest.h  main.cpp  mocks.h  test_utils.h  xbel_file_reader_test.cpp  xbel_file_reader_test.h  xbel_parser_test.cpp  xbel_parser_test.h  xbel_reader_test.cpp  xbel_reader_test.h
libbookmarksmodule/tests/resources/: Bookmarks  konqueror_bookmarks.xml  konqueror_bookmarks_same_name_for_folder_and_items.xml  okular_bookmarks.xml
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: Bookmarkdelegate.qml  Bookmarkview.qml  ContactModel.qml  DelegateBar.qml  Editsourceview.qml  Header.qml  Helper.qml  Selectpathbar.qml  main.qml
plasmoid/contents/ui/config/: configgeneral.qml  configsearch.qml
plasmoid/contents/ui/test/: tst_calling_okular.qml
scripts/: build.sh  format.sh  install.sh  test.sh  try_with_plasmoidviewer.sh
