CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0)
PROJECT(BookmarkPlasmoid)
ENABLE_TESTING ()

FIND_PACKAGE (ECM REQUIRED NO_MODULE)

SET (CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR}
                       ${CMAKE_MODULE_PATH})
SET (QML_IMPORT_PATH $ENV{QML2_IMPORT_PARTH})
SET (CMAKE_INSTALL_PREFIX=/usr)

FIND_PACKAGE (KF5Plasma REQUIRED)

ADD_SUBDIRECTORY (libbookmarksmodule)

PLASMA_INSTALL_PACKAGE (plasmoid org.kde.bookmarkplasmoid)
ADD_TEST (
  NAME qmltestrunner
  COMMAND qmltestrunner
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
