ENABLE_LANGUAGE (CXX)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") # Usage of C++11
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12 FATAL_ERROR)
SET (CMAKE_INSTALL_PREFIX=/usr)

INCLUDE (FeatureSummary)
FEATURE_SUMMARY (WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
FIND_PACKAGE (ECM 1.0.0 REQUIRED NO_MODULE)
SET (CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR}
                       ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
SET (CMAKE_INCLUDE_CURRENT_DIR ON) # Find includes in corresponding build
                                   # directories
SET (CMAKE_AUTOMOC ON) # Instruct CMake to run moc automatically when needed.

SET (QT_MIN_VERSION "5.3.0")
SET (KF5_MIN_VERSION "5.2.0")
FIND_PACKAGE (KF5Plasma REQUIRED)
FIND_PACKAGE (KF5I18n NO_MODULE)
FIND_PACKAGE (Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core Qml)
FIND_PACKAGE (KF5IconThemes)
INCLUDE (KDEInstallDirs)
INCLUDE (KDECMakeSettings)
INCLUDE (KDECompilerSettings)
ADD_DEFINITIONS (${QT_DEFINITIONS})
SET (PROJECT_NAME bookmarkmodelplugin)
PROJECT (${PROJECT_NAME} CXX)

# file (GLOB SRC "*.cpp" )
INCLUDE_DIRECTORIES (./../)
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}${CMAKE_BINARY_DIR} ${QT_INCLUDES})

# Copy qmldir file to build dir for running in QtCreator
ADD_CUSTOM_TARGET (
  ${PROJECT_NAME}-qmldir ALL
  COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/qmldir ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS ${QMLFILES})

# query_qmake(QT_INSTALL_PLUGINS QT_PLUGINS_DIR) query_qmake(QT_INSTALL_IMPORTS
# QT_IMPORTS_DIR)
SET (
  QT_IMPORTS_DIR /usr/lib/x86_64-linux-gnu/qt5/qml/) # TODO this should be set
                                                     # in platform independant
MESSAGE (
  STATUS
    "${PROJECT_NAME}:  QT_IMPORTS_DIR.------------------------------------------------\n"
    "${QT_IMPORTS_DIR}")

SET (LIBNAME bookmarkmodelplugin)
SET (SRC ${SRC} bookmarkmodel.cpp)
SET (CMAKE_CXX_VISIBILITY_PRESET)
ADD_LIBRARY (${LIBNAME} SHARED ${SRC})
QT5_USE_MODULES (${LIBNAME} Qml)
SET_TARGET_PROPERTIES (
  ${LIBNAME}
  PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_NAME}
    VERSION
    ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}
    SOVERSION
    ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})

TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  PUBLIC $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES (${LIBNAME} Qt5::Core Qt5::Qml KF5::IconThemes)

INSTALL (TARGETS ${LIBNAME} DESTINATION ${QT_IMPORTS_DIR}/MyPlugins/)
INSTALL (FILES qmldir DESTINATION ${QT_IMPORTS_DIR}/MyPlugins/)
# install(FILES bookmarkmodule.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
ADD_SUBDIRECTORY (Tests)
