ENABLE_LANGUAGE (CXX)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14") # Usage of C++11
CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0 FATAL_ERROR)
SET (CMAKE_INSTALL_PREFIX=/usr)

INCLUDE (FeatureSummary)
FEATURE_SUMMARY (WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
FIND_PACKAGE (ECM 1.0.0 REQUIRED NO_MODULE)
SET (CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR}
                       ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
SET (CMAKE_INCLUDE_CURRENT_DIR ON)
SET (CMAKE_AUTOMOC ON)

SET (QT_MIN_VERSION "5.3.0")
SET (KF5_MIN_VERSION "5.2.0")
FIND_PACKAGE (KF5Plasma REQUIRED)
FIND_PACKAGE (KF5I18n NO_MODULE)
FIND_PACKAGE (Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core Qml)
FIND_PACKAGE (KF5IconThemes)
INCLUDE (KDEInstallDirs)
INCLUDE (KDECMakeSettings)
INCLUDE (KDECompilerSettings)
ADD_DEFINITIONS (${QT_DEFINITIONS})
SET (PROJECT_NAME Bookmarkmodelplugin)

PROJECT (
  ${PROJECT_NAME}
  VERSION "1.0"
  LANGUAGES CXX)

INCLUDE_DIRECTORIES (./../)
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}${CMAKE_BINARY_DIR} ${QT_INCLUDES})

ADD_CUSTOM_TARGET (
  ${PROJECT_NAME}-qmldir ALL
  COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/qmldir
          ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}
  DEPENDS ${QMLFILES}
  COMMENT "Copying ${PROJECT_NAME}-qmldir file to build directory")

SET (QT_IMPORTS_DIR /usr/lib/x86_64-linux-gnu/qt5/qml/)

SET (LIBNAME bookmarkmodelplugin)
SET (CMAKE_CXX_VISIBILITY_PRESET)
ADD_LIBRARY (
  ${LIBNAME} SHARED
  src/bookmarkmodel.cpp
  src/bookmark_model_plugin.cpp
  src/xbel_parser.cpp
  src/utils.cpp
  include/libbookmarksmodule/bookmark_model_plugin.h
  include/libbookmarksmodule/bookmarkmodel.h
  include/libbookmarksmodule/xbel_parser.h
  include/libbookmarksmodule/data_types.h
  include/libbookmarksmodule/utils.h
  include/libbookmarksmodule/environment_theme_facade.h)
QT5_USE_MODULES (${LIBNAME} Qml)
SET_TARGET_PROPERTIES (
  ${LIBNAME}
  PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_NAME}
    VERSION
    "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}"
    SOVERSION
    "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}"
)

TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/include/
                    $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES (${LIBNAME} Qt5::Core Qt5::Qml KF5::IconThemes)

FIND_PROGRAM (QMLPLUGINDUMP qmlplugindump)
ADD_CUSTOM_TARGET (
  plugins-qmltypes ALL
  DEPENDS ${LIBNAME} ${PROJECT_NAME}-qmldir
  COMMENT "Run qmlplugindump"
  COMMAND
    ${QMLPLUGINDUMP} -relocatable ${PROJECT_NAME}
    ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    ${CMAKE_CURRENT_BINARY_DIR} >
    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/plugins.qmltypes)

INSTALL (TARGETS ${LIBNAME} DESTINATION ${QT_IMPORTS_DIR}/${PROJECT_NAME}/)
INSTALL (FILES qmldir DESTINATION ${QT_IMPORTS_DIR}/${PROJECT_NAME}/)
INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/plugins.qmltypes
         DESTINATION ${QT_IMPORTS_DIR}/${PROJECT_NAME}/)

ADD_SUBDIRECTORY (tests)
